adding some content

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">DatingHub</string>
+    <string name="welcome_to_my_dating_hub">Welcome to my dating hub!</string>
+    <string name="username">Manali Biswas</string>
 </resources>
